<resources>
    <string name="app_name">ApietTravel</string>
    <string name="app_register">Register</string>
    <string name="app_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_firstname">FirstName</string>
    <string name="prompt_lastname">Last Name</string>
    <string name="prompt_country">Country</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_register_in">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."
    </string>

    <!-- Path Font-Famiy -->
    <string name="pathPrimary">fonts/Bree Regular.otf</string>
    <string name="pathSecond">fonts/BreeSerif-Regular.ttf</string>
    <string name="pathThree">fonts/Raleway-Medium.ttf</string>

    //Link
    <string name="linkTermsConditions">To register, I accept the <u>Terms and Conditions</u></string>
    <string name="optionLogin">Or start session with:</string>
    <string name="title_activity_main">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="msgLogin">Unable to login</string>

    //Dialog
    <string name="titleDialog">CLOSED SESSION</string>
    <string name="messageDialog">Are you sure closed sesion?</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>

    //Facebook
    <string name="id_facebook">136417117010010</string>
    <string name="sign_in_facebook_button">Log in with Facebook</string>
    //Twitter
    <string name="apiKey">boAXPIkK9InYwydnfptEb7gTA</string>
    <string name="apiSecret">vFetHzAevx2NUdJlsfykcTViBofjtMK5gMBLbUiQSFFk3TNECG</string>

    <string name="title_activity_splash">ApietTravel</string>
    <string name="dummy_button2">Dummy Button</string>
    <string name="dummy_content2">ApietTravel</string>

    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="login">Login</string>
    <string name="skip">Skip</string>
    <string name="dummy_content">IRWIN\nESTRADA</string>
    <string name="wrongoption">Wrong Option</string>

    //Data Menu Main
    <string-array name="names_array">
        <item>What to do?</item>
        <item>Destinations</item>
        <item>Experiences</item>
        <item>Cuisine</item>
        <item>Gallery</item>
        <item>Utilities</item>
        <item>My routes</item>
        <item>My favorites</item>
    </string-array>

</resources>
